added help resources and new fields
